force-app/main/default/objects/AdWebCartItem__c/AdWebCartItem__c.object-meta.xml
<CustomObject>
    <description>Ad cart item containing reference to its cart, specifications and its extra data.</description>
    <label>Ad Web Cart Item</label>
    <nameField>
        <displayFormat>ACI-{0000}</displayFormat>
        <label>Ad Web Cart Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ad Web Cart Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>