force-app/main/default/objects/AdWebCartItem__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Brand of this product.</description>
    <inlineHelpText>Brand of this product.</inlineHelpText>
    <label>Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>