force-app/main/default/objects/AdWebCartItem__c/fields/Cart__c.field-meta.xml
<CustomField>
    <fullName>Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ad web cart this item is assigned to.</description>
    <inlineHelpText>Ad web cart this item is assigned to.</inlineHelpText>
    <label>Cart</label>
    <referenceTo>AdWebCart__c</referenceTo>
    <relationshipLabel>Ad Web Cart Items</relationshipLabel>
    <relationshipName>AdWebCartItems</relationshipName>
    <type>Lookup</type>
</CustomField>