force-app/main/default/objects/AdWebCartItem__c/fields/EAN__c.field-meta.xml
<CustomField>
    <fullName>EAN__c</fullName>
    <description>EAN code of this product.</description>
    <inlineHelpText>EAN code of this product.</inlineHelpText>
    <label>EAN</label>
    <length>13</length>
    <type>Text</type>
</CustomField>