force-app/main/default/objects/AdWebCartItem__c/fields/ExtraJsonData__c.field-meta.xml
<CustomField>
    <fullName>ExtraJsonData__c</fullName>
    <description>Text containing any extra configurations for this item in JSON format.</description>
    <inlineHelpText>Text containing any extra configurations for this item in JSON format.</inlineHelpText>
    <label>ExtraJsonData</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>