force-app/main/default/objects/AdWebCartItem__c/fields/InspirationName__c.field-meta.xml
<CustomField>
    <fullName>InspirationName__c</fullName>
    <description>Inspiration of this product.</description>
    <inlineHelpText>Inspiration of this product.</inlineHelpText>
    <label>Inspiration Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>