force-app/main/default/objects/AdWebCartItem__c/fields/ItemName__c.field-meta.xml
<CustomField>
    <fullName>ItemName__c</fullName>
    <description>Name that will be used whenever listing this item in the UI.</description>
    <inlineHelpText>Name that will be used whenever listing this item in the UI.</inlineHelpText>
    <label>Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>