force-app/main/default/objects/AdWebCartItem__c/fields/ItemType__c.field-meta.xml
<CustomField>
    <fullName>ItemType__c</fullName>
    <description>Type of ad item - EAN for products, BRAND for brand, OFFER for offers and INSPIRATION for inspirational other content</description>
    <label>ItemType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EAN</fullName>
                <default>true</default>
                <label>EAN</label>
            </value>
            <value>
                <fullName>BRAND</fullName>
            </value>
            <value>
                <fullName>OFFER</fullName>
            </value>
            <value>
                <fullName>INSPIRATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>