force-app/main/default/objects/AdWebCartItem__c/fields/OfferName__c.field-meta.xml
<CustomField>
    <fullName>OfferName__c</fullName>
    <description>Name of the offer assigned to this product.</description>
    <inlineHelpText>Name of the offer assigned to this product.</inlineHelpText>
    <label>Offer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>