force-app/main/default/objects/AdWebCartItem__c/fields/Specification__c.field-meta.xml
<CustomField>
    <fullName>Specification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ad space Specification assigned to this item.</description>
    <inlineHelpText>Ad space Specification assigned to this item.</inlineHelpText>
    <label>Specification</label>
    <referenceTo>AdSpaceSpecification</referenceTo>
    <relationshipLabel>Ad Web Cart Items</relationshipLabel>
    <relationshipName>AdWebCartItems</relationshipName>
    <type>Lookup</type>
</CustomField>